[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
# https://rustwiki.org/zh-CN/rust-by-example/custom_types/enum/c_like.html
[dependencies]
pretty_assertions = "1.4.0"
scraper = { version = "0.20.0" }
error-chain = "0.12.4"
reqwest = "0.12.7"
select = "0.6.0"
tokio = { version = "1.39.3", features = ["full"] }