[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
# https://rustwiki.org/zh-CN/rust-by-example/custom_types/enum/c_like.html
[dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
tokio = { version = "1.41.1", features = ["full"] }
regex="1.11.0"
num_cpus = "1.16.0"
chrono = "0.4.39"
eval = "0.4.3"