[package]
name = "httpdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http="1.0.0"
rand="*"
error-chain = "0.12.4"
reqwest = "0.11.12"

select = "0.5.0"

tokio = { version = "1.21.2", features = ["full"] }
